# aliyun-game

./: .dockerignore  .env.example  .env.production  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  docker-start.sh  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
app/: __init__.py  api_manager.py  home.py  main.py  report.py
app/components/: __init__.py  bracket_tree.py
app/pages/: __init__.py  analysis.py  bracket.py  home.py  match_detail.py  report.py
backend/: __init__.py  api_configs.json  main.py
backend/api/: admin.py  data.py  prediction.py
backend/services/: prediction_service.py
config/: __init__.py  data_sources.yaml  prediction_model_design.yaml  settings.py
data/metadata/: collection_report.json  missing_data_report.json
data/processed/: champion_prediction.json
data/sources/: kaggle_intl_matches_trace.json  kaggle_worldcup_trace.json
data_collection/: __init__.py  live_fetcher.py
docs/: Agent分析报告.md  generate_beautified_ppt.py  功能总览_CLI参考手册.md
docs/deployment/: 阿里云部署方案.md
docs/presentation/: 世界杯冠军预测Agent_答辩.pptx  世界杯冠军预测Agent_路演.pptx  世界杯冠军预测Agent_路演_美化版.pptx  美化版PPT_修改说明.md  (+1 more)
models/: __init__.py  champion.py  explainer.py  group_stage.py  knockout.py  match_predictor.py  output.py  team_rating.py  tournament_sim.py
scripts/: collect_real_data.py  deploy_aliyun.sh  fetch_data.py  generate_assets.py  generate_ppt.py  generate_pro_ppt.py  run_demo.py  run_pipeline.py  train_model.py
tests/: test_team_rating.py
utils/: __init__.py  data_loader.py  helpers.py  logger.py
(+13 files in other folders)
